[gd_scene load_steps=2 format=3 uid="uid://cggwbslmd2pcu"]

[ext_resource type="Script" path="res://Scenes/Objects/EnemySpawner.gd" id="1_cf7mf"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_cf7mf")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(142, -1)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(314, -1)
